Handle POST request

--- a/ejs-views/contacts.ejs
+++ b/ejs-views/contacts.ejs
@@ -1,12 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Node.js Course | <%= title %></title>
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/main.css">
-</head>
+  <%- include('./partials/head.ejs') %>
 <body>
   <%- include('./partials/nav.ejs') %>
   <h1>Contacts:</h1>
