--- a/ejs-views/posts.ejs
+++ b/ejs-views/posts.ejs
@@ -6,7 +6,7 @@
   <h1>Posts:</h1>
   <ul>
     <% if (posts.length) { %>
-      <% posts.forEach(({ id, text, title, date, author }) => { %>
+      <% posts.forEach(({ id, text, title, createdAt, author }) => { %>
         <li>
           <article>
             <h2>
@@ -14,7 +14,7 @@
             </h2>
             <p><%= text %></p>
             <div class="info">
-              <span><%= date %></span>
+              <span><%= createdAt.toLocaleDateString() %></span>
               <span><%= author %></span>
             </div>
           </article>
